--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^4.4.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -29,10 +30,13 @@
     "@nestjs/swagger": "^11.2.0",
     "cache-manager": "^7.0.0",
     "cache-manager-redis-store": "^3.0.1",
+    "cacheable": "^1.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "elliptic": "^6.6.1",
     "ioredis": "^5.6.1",
+    "keyv": "^5.3.4",
+    "keyv-redis": "^1.3.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "redis": "^5.5.6",
